# rrjj

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  musl.yml  release.yml
bench/: README.md  latency_runner.py  paired_runner.py  run.py  s3_smoke.py  test_latency_runner.py  test_paired_runner.py  test_s3_smoke.py  validate_latency_result.py  validate_result.py
bench/jj-scale/: Cargo.toml  README.md
bench/jj-scale/src/: main.rs
bench/results/: local-1m.json  local-latency-product-defaults.json  local-latency-smoke.json  local-smoke.json
bench/workloads/: real.py  synthetic.py
crates/rrjj/: Cargo.toml
crates/rrjj-core/: Cargo.toml
crates/rrjj-core/src/: lib.rs
crates/rrjj-reader/: Cargo.toml
crates/rrjj-reader/src/: lib.rs
crates/rrjj-schema/: Cargo.toml
crates/rrjj-schema/src/: lib.rs
crates/rrjj-sinks/: Cargo.toml
crates/rrjj-sinks/migrations/: 0001_sessions.sql
crates/rrjj-sinks/src/: broadcast.rs  durable.rs  error.rs  git.rs  http.rs  journal.rs  lib.rs  local.rs  traits.rs  util.rs
crates/rrjj/src/: main.rs
examples/ndjson_tail/: README.md  tail.sh
schema/: v0.md
schema/postgres/: README.md  v1.sql
scripts/: build-musl.sh
ui/scrubber/: README.md  index.html  rrjj-live.mjs  timeline-model.mjs  timeline-model.test.mjs
