[package]
name = "rrjj-reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Durable session reader for rrjj recordings"
publish = false

[dependencies]
futures.workspace = true
jj-lib.workspace = true
rrjj-schema = { path = "../rrjj-schema" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
