[package]
name = "rrjj-sinks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Durable local, S3, and Postgres-compatible sinks for rrjj recordings"
publish = false

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
rrjj-schema = { path = "../rrjj-schema" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
