[package]
name = "rrjj-sinks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local, Git, and HTTP durable sinks for rrjj recordings"
publish = false

[dependencies]
async-trait.workspace = true
git2.workspace = true
reqwest.workspace = true
rrjj-schema = { path = "../rrjj-schema" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
