[package]
name = "rrjj"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A jj-backed flight recorder for filesystem workspaces"
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
rrjj-core = { path = "../rrjj-core" }
rrjj-reader = { path = "../rrjj-reader" }
rrjj-schema = { path = "../rrjj-schema" }
rrjj-sinks = { path = "../rrjj-sinks" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
